--- a/src/components/PostCard/PostDetails/PostDetails.scss
+++ b/src/components/PostCard/PostDetails/PostDetails.scss
@@ -1,3 +1,7 @@
+.postDetails {
+  /* empty */
+}
+
 .cardPadding {
   padding: 0px $space-4x;
 }
